# asobiba

./: CMakeLists.txt  README.md
include/: Main.hpp  MathHelpers.hpp  Particle.hpp  ParticleSystem.hpp
resources/scripts/: gameloop.nut  hello.nut
source/: Main.cpp  Particle.cpp  ParticleSystem.cpp
